<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
    <item
        android:id="@+id/main_menu"
        android:checked="false"
        android:icon="@drawable/list_48px"
        android:title="@string/main_menu"/>
    <item
        android:id="@+id/search"
        android:checked="false"
        android:icon="@drawable/search_48px"
        android:title="@string/search_menu"/>
    <item
        android:id="@+id/stats"
        android:checked="false"
        android:icon="@drawable/stats_48px"
        android:title="@string/stats"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

    <item
        android:id="@+id/contact"
        android:checked="false"
        android:icon="@drawable/user_48px"
        android:title="@string/contact"/>
    <item
        android:id="@+id/about"
        android:checked="false"
        android:icon="@drawable/about_48px"
        android:title="@string/about"/>

    </group>

</menu>