<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLighterDark"
        android:orientation="vertical">
        <include layout="@layout/toolbar_player_info">
        </include>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/league_login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status"
                    android:textSize="30sp"
                    android:textColor="#2f8c07"
                    android:textStyle="bold"
                    android:text="@string/signed_out"
                    android:layout_marginLeft="100dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <EditText
                    android:id="@+id/field_username"
                    android:visibility="gone"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/username" />

                <Button
                    android:id="@+id/main_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Summoner Name"
                    android:layout_marginLeft="50dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_toRightOf="@id/field_username"
                    android:layout_alignBottom="@+id/field_username"
                    android:background="@color/colorPrimary"
                    android:visibility="gone" />


            </RelativeLayout>

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="150dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_marginLeft="40dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textPassword" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/sign_in" />

            <Button
                android:layout_gravity="bottom"
                android:id="@+id/email_create_account_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="30dp"
                android:text="@string/create_account" />

        </LinearLayout>

        <Button
            android:layout_marginTop="70dp"
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_out"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:visibility="gone" />

    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:layout_height="match_parent"
        android:layout_width="280dp"
        android:id="@+id/navigation_view"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/menu_drawer"
        android:background="@color/colorLighterDark"
        app:itemTextColor="@color/White"
        android:layout_gravity="start">


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>